# ffevaluation

./: .travis.yml  DEPENDENCIES  MANIFEST.in  README.md  conda-environment.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml  workflow.yml
ci/: insert_placeholder_values.py
ci/travis/: conda_upload.sh  deploy.sh
ffevaluation/: __init__.py  ffevaluate.py  home.py  logging.ini  numbautil.py  test_ffevaluate.py  version.py
ffevaluation/test-data/ciprofloxacin/: mol.frcmod
ffevaluation/test-data/waterbox/: .output.xtc
package/ffevaluation/: .gitignore  build.sh  insert_placeholder_values.py  meta.yaml  recipe_template.yaml
tests/: test_ffevaluate.py
tests/test-data/ciprofloxacin/: mol.cif  structure.prmtop
