[project]
name = "ffevaluation"
description = "Forcefield evaluation implemented in python/numba"
authors = [{ name = "Stefan Doerr", email = "s.doerr@acellera.com" }]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "parmed",
  "moleculekit",
  "numpy>=1.17",
  "numba>=0.56.4",
  "networkx"
]

[project.urls]
"Homepage" = "https://github.com/Acellera/ffevaluation"
"Bug Tracker" = "https://github.com/Acellera/ffevaluation/issues"

[tool.setuptools.packages.find]
include = ["ffevaluation*"]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# [tool.pytest.ini_options]
# python_files = "*.py"
# python_classes = "_Test"
# python_functions = "_test*"
# norecursedirs = "test-data"


# [tool.cibuildwheel]
# # Disable PyPy builds due to our Cython code not being compatible with it yet
# # Disable Windows 32 builds, Musllinux builds due to rdkit not building on it
# # Disable i686, ppc64le, s390x, universal2, armv7l due to numpy not building on them
# skip = ["pp*", "*win32", "*armv7l", "*_i686", "*_ppc64le", "*_s390x", "*_universal2", "*musllinux_x86_64", "*musllinux_aarch64"]
# test-requires = ["pytest", "pytest-xdist"]
# test-command = "pytest -n auto {project}/tests"
# manylinux-x86_64-image = "manylinux_2_28"
# manylinux-aarch64-image = "manylinux_2_28"
# # build-frontend = "build[uv]"